# ProteinDF_bridge

./: .gitignore  README.md  run_test.sh  setup.cfg  setup.py
data/: ACE_ALA_NME.brd  ACE_ALA_NME_cis1.brd  ACE_ALA_NME_cis1.yml  ACE_ALA_NME_cis2.brd  ACE_ALA_NME_cis2.yml  ACE_ALA_NME_trans1.brd  ACE_ALA_NME_trans1.yml  ACE_ALA_NME_trans2.brd  ACE_ALA_NME_trans2.yml  NML_trans.brd
pdfbridge/: __init__.py  amber_prmtop.py  aminoacid.py  atom.py  atomgroup.py  biopdb.py  bond.py  common.py  dbmanager.py  error.py  ionpair.py  mail.py  matrix.py  modeling.py  neutralize.py  periodictable.py  position.py  position_test.py  select.py  ssbond.py  superposer.py  superposer_quaternion.py  utils.py  vector.py  xyz.py
proteindf_bridge/: __init__.py  _version.py  amber_prmtop.py  aminoacid.py  atom.py  atomgroup.py  biopdb.py  common.py  dbmanager.py  error.py  format.py  functions.py  gro.py  ionpair.py  mail.py  matrix.py  mmcif.py  modeling.py  mol2.py  neutralize.py  path.py  periodictable.py  position.py  position_test.py  select.py  ssbond.py  str_processing.py  superposer.py  superposer_quaternion.py  utils.py  vector.py  xyz.py
scripts/: brd-box.py  brd-cell.py  brd-density.py  brd-divide-mainchain.py  brd-divide.py  brd-formula.py  brd-renumber-resid.py  brd-restructure.py  brd-select-path.py  brd-select.py  brd-setup-bond.py  brd-show-bonds.py  brd-show-res.py  brd2gro.py  brd2pdb.py  brd2txt.py  brd2xyz.py  crystallize.py  db2txt.py  doctest_runner.py  gro2brd.py  mmcif2mol2.py  mmcif2txt.py  module_inspect.py  mpac2txt.py  mpac2yml.py  neutralize.py  pdb2brd.py  read_amber_prmtop.py  relax_protein.py  relax_protein.sh  remove_wat.py  reorder.py  superposer.py  xyz2brd.py  yml2mpac.py
tests/: atom_test.py  atomgroup_test.py  position_test.py  test_atom.py  test_atomgroup.py  test_biopdb.py  test_format.py  test_gro.py  test_path.py  test_select.py  (+3 more)
(+17 files in other folders)
