[metadata]
name = proteindf_bridge
version = 2023.3.0
description = bridge scripts the ProteinDF package and other data/package
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3
author = Toshiyuki HIRANO
author_email = hiracchi@gmail.com
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Utilities


[options]
packages = proteindf_bridge

scripts = 
    scripts/doctest_runner.py
    scripts/mpac2yml.py
    scripts/mpac2txt.py
    scripts/yml2mpac.py
    scripts/brd-box.py
    scripts/brd-density.py
    scripts/brd-formula.py
    scripts/brd-restructure.py
    scripts/brd-select.py
    scripts/brd-divide.py
    scripts/brd-divide-mainchain.py
    scripts/brd-select-path.py
    scripts/brd-show-res.py
    scripts/brd-renumber-resid.py
    scripts/brd2txt.py
    scripts/pdb2brd.py
    scripts/brd2pdb.py
    scripts/mmcif2txt.py
    scripts/mmcif2mol2.py
    scripts/gro2brd.py
    scripts/brd2gro.py
    scripts/xyz2brd.py
    scripts/brd2xyz.py
    scripts/module_inspect.py
    scripts/db2txt.py
    scripts/brd-setup-bond.py
    scripts/brd-show-bonds.py
    scripts/superposer.py
    scripts/neutralize.py
    scripts/reorder.py
    scripts/crystallize.py
    scripts/read_amber_prmtop.py
    # scripts/remove_wat.py
    # scripts/relax_protein.py
    # scripts/relax_protein.sh

install_requires =
    configparser
    msgpack
    pyyaml
    numpy


[options.package_data]
proteindf_bridge = data/*.brd

